Fix: disappearing scrollbar at WRM urls

--- a/src/styles/tink-gis-angular.scss
+++ b/src/styles/tink-gis-angular.scss
@@ -340,6 +340,7 @@ button.btn.active {
 //Creating parent container for flex column and overflow-wrapper
 .relative-container {
   // flex container settings
+  min-height:0;
   display: flex;
 }
 
